--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "^2.0.4"
   }
 }
